Fix for code blocks being unreadable in dark theme

--- a/css/style.scss
+++ b/css/style.scss
@@ -614,7 +614,7 @@ pre > code {
   font-size: 14px;
   white-space: pre;
   border-radius: 2px;
-  background-color: white;
+  background-color: #333;
   display: block;
   padding: 10px 10px 7px;
   overflow: auto;
